--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.4",
+    "react-use-wizard": "^2.2.3",
     "redux": "^4.2.1",
     "sass": "^1.66.1",
     "save": "^2.9.0",
